--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ input {
 
 <body>
 
-<input id="id" placeholder="Member ID (optional)">
+<input id="id" placeholder="Member ID (recommended)">
 <input id="last" placeholder="Last Name">
-<input id="first" placeholder="First Name (optional)">
+<input id="first" placeholder="First Name">
 
 <div id="results"></div>
 
