--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ input {
 
 <body>
 
-<input id="id" placeholder="Member ID (recommended)">
+<input id="id" placeholder="Client ID (recommended)">
 <input id="last" placeholder="Last Name">
 <input id="first" placeholder="First Name">
 
