--- a/index.html
+++ b/index.html
@@ -105,16 +105,34 @@ container.appendChild(div);
 }
 
 function select(r) {
-  // 1) Save widget value
-  JFCustomWidget.sendData({ value: r.id });
+  // optional: still copy ID
+  navigator.clipboard.writeText(r.id).catch(() => {});
 
-  // 2) Force Jotform to treat it like a real field update (triggers conditions)
-  JFCustomWidget.sendSubmit({ valid: true, value: r.id });
+  // ✅ CHANGE THESE to match your prefill URL parameter names
+  const FORM_URL = "https://form.jotform.com/260394523652054/prefill/698e01fa353239cb09b03cb286cb"; // your form URL
+  const P = {
+    uniqueId: "uniqueID",          // <-- replace with real param key
+    first: "firstName",            // <-- replace with real param key
+    last: "lastName",              // <-- replace with real param key
+    family: "family",              // <-- replace with real param key
+    address: "address",            // <-- replace with real param key
+    start: "startDate",            // <-- replace with real param key
+    end: "endDate"                 // <-- replace with real param key
+  };
 
-  // optional UX
-  navigator.clipboard.writeText(r.id);
-  alert("Selected ID: " + r.id);
+  const qs = new URLSearchParams();
+  qs.set(P.uniqueId, r.id || "");
+  qs.set(P.first, r.first || "");
+  qs.set(P.last, r.last || "");
+  qs.set(P.family, r["# in family"] || "");
+  qs.set(P.address, r.address || "");
+  qs.set(P.start, r.start || "");
+  qs.set(P.end, r.end || "");
+
+  // ✅ In the Jotform app / iframe context, top-level redirect is usually needed
+  window.top.location.href = `${FORM_URL}?${qs.toString()}`;
 }
+
 
 
 </script>
