--- a/index.html
+++ b/index.html
@@ -42,6 +42,28 @@ input {
 
 <script>
 
+// PASTE IT HERE
+function jsonp(url) {
+  return new Promise((resolve, reject) => {
+    const cbName = "cb_" + Math.random().toString(36).slice(2);
+    window[cbName] = (data) => {
+      try { delete window[cbName]; } catch(e) {}
+      script.remove();
+      resolve(data);
+    };
+
+    const script = document.createElement("script");
+    script.src = url + (url.includes("?") ? "&" : "?") + "callback=" + cbName;
+    script.onerror = () => {
+      try { delete window[cbName]; } catch(e) {}
+      script.remove();
+      reject(new Error("JSONP request failed"));
+    };
+    document.body.appendChild(script);
+  });
+}
+
+
 const ENDPOINT = "https://script.google.com/macros/s/AKfycbwBIQRPuQJYniRTgE8O_WA4puHLdLEKV_t65Ytiw3NuQOb9IMqTxjpGGhhVnHfifLzx/exec";
 
 let timeout;
@@ -68,8 +90,8 @@ if (!id && !last) {
 const url =
   `${ENDPOINT}?id=${encodeURIComponent(id)}&last=${encodeURIComponent(last)}&first=${encodeURIComponent(first)}&limit=25`;
 
-const response = await fetch(url);
-const data = await response.json();
+const data = await jsonp(url);
+
 
 render(data.results);
 
