--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@ function jsonp(url) {
 
 
 const ENDPOINT = "https://script.google.com/macros/s/AKfycbwBIQRPuQJYniRTgE8O_WA4puHLdLEKV_t65Ytiw3NuQOb9IMqTxjpGGhhVnHfifLzx/exec";
+function jsonp(url) { /* your jsonp function */ }
+
+const ENDPOINT = "https://script.google.com/macros/s/.../exec";
+
+// ✅ Add this right here:
+jsonp(`${ENDPOINT}?id=zzzzzzzz&limit=1`).catch(()=>{});
+
+// your existing listeners + search() below...
 
 let timeout;
 
@@ -73,6 +81,10 @@ document.getElementById("last").addEventListener("input", search);
 document.getElementById("first").addEventListener("input", search);
 
 function search() {
+if (!id && last.length < 2) {
+  document.getElementById("results").innerHTML = "";
+  return;
+}
 
 clearTimeout(timeout);
 
