--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ function jsonp(url) {
 }
 
 // ===== Set your Apps Script endpoint here =====
-const ENDPOINT = "YOUR_APPS_SCRIPT_EXEC_URL_HERE";
+const ENDPOINT = "https://script.google.com/macros/s/AKfycbyHOJj1wvNzz4z4OhjxpUBIQDhr3KDKE4tug6jUemZSNIlkYximRfcP2sg5GxCF5J5a/exec";
 
 let t = null;
 
